crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
spec:
  selector:
    app: synergychat-crawler
  ports:
  - name: clawler-service
    protocol: TCP
    port: 80
    targetPort: 8080
---
